--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "connect-mongo": "^2.0.0",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "joi": "^13.0.2",
     "jsonwebtoken": "^8.1.0",
-    "mongoose": "^4.13.6"
+    "mongoose": "^4.13.6",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
